--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@graphql-tools/schema": "^10.0.7",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
