--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.2",
     "@graphql-tools/schema": "^10.0.7",
+    "@graphql-tools/merge": "^8.4.0",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.1",
     "cookie-parser": "^1.4.7",
@@ -22,12 +23,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
-    "graphql-subscriptions": "^2.0.0",
-    "graphql-type-json": "^0.3.2",
-    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
-    "validator": "^13.12.0",
-    "ws": "^8.18.0"
+    "validator": "^13.12.0"
   }
 }
