--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.11.2",
-    "@graphql-tools/schema": "^10.0.7",
     "@graphql-tools/merge": "^8.4.0",
+    "@graphql-tools/schema": "^10.0.7",
     "bcryptjs": "^2.4.3",
     "cookie": "^1.0.1",
     "cookie-parser": "^1.4.7",
@@ -23,8 +23,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "ws": "^8.18.1"
   }
 }
